# Cex_Aggregator

./: .gitignore  README.md  package-lock.json
Cex_Orderbook_Agg/: Cargo.toml
Cex_Orderbook_Agg/exchanges/: Cargo.toml
Cex_Orderbook_Agg/exchanges/src/: binance.rs  bitstamp.rs
Cex_Orderbook_Agg/grpc/: Cargo.toml  build.rs
Cex_Orderbook_Agg/grpc/proto/: orderbook.proto
Cex_Orderbook_Agg/grpc/src/: client.rs  lib.rs  server.rs
Cex_Orderbook_Agg/src/: main.rs
cex_orderbook_agg/: Cargo.toml
cex_orderbook_agg/exc_orderbook/: Cargo.toml
cex_orderbook_agg/exc_orderbook/src/: combine_orderbook.rs  lib.rs
cex_orderbook_agg/exchanges/: Cargo.toml
cex_orderbook_agg/exchanges/src/: binance.rs  bitstamp.rs
cex_orderbook_agg/grpc/: Cargo.toml  build.rs
cex_orderbook_agg/grpc/proto/: orderbook.proto
cex_orderbook_agg/grpc/src/: client.rs  server.rs
cex_orderbook_agg/src/: main.rs
frontend/: package-lock.json  package.json
frontend/src/: client.js
