[package]
name = "exchanges"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exc_orderbook = {path = "../exc_orderbook"}
env_logger = "0.10.0"
futures-util = "0.3.28"
log = "0.4.19"
prost = "0.11.9"
tokio = { version = "1.29.1", features = ["full"] }
tokio-tungstenite = "0.19.0"
tonic = "0.9.2"
async-trait = "0.1.71"
serde = { version = "1.0.171", features = ["derive"]}
serde_json = "1.0.103"
tungstenite = { version = "0.14.0" , features = ["rustls-tls"]}
url = "2.4.0"

[build-dependencies]
tonic-build = "0.9.2"

[lib]
name = "exchanges"
path = "src/lib.rs"