[package]
name = "grpc"
version = "0.1.0"
edition = "2021"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exc_orderbook = { path = "../exc_orderbook" }
exchanges = { path = "../exchanges" }
tonic = "0.9.2"
prost = "0.11.9"
tokio = { version = "1.29.1", features = ["macros","rt-multi-thread"] }
tokio-stream = "0.1.14"
futures = "0.3.28"

[lib]
name = "grpc"
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[build-dependencies]
tonic-build = "0.9.2"