[package]
name = "exchanges"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exc_orderbook = {path = "../exc_orderbook"}
env_logger = "0.10.0"
futures-util = "0.3.28"
log = "0.4.19"
prost = "0.11.9"
tokio = { version = "1.29.1", features = ["macros","rt-multi-thread"] }
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"]}
tonic = "0.9.2"
async-trait = "0.1.71"
serde = { version = "1.0.171", features = ["derive"]}
serde_json = "1.0.103"
url = "2.4.0"
rand = "0.8.5"

[build-dependencies]
tonic-build = "0.9.2"

[lib]
name = "exchanges"
path = "src/lib.rs"